force-app/main/default/objects/VITauxHoraire__c/VITauxHoraire__c.object-meta.xml
<CustomObject>
    <label>Taux horaire</label>
    <nameField>
        <displayFormat>TH{00000}</displayFormat>
        <label>Ref de Taux horare</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taux horaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>