force-app/main/default/objects/VITauxHoraire__c/fields/Taux_devis_conversion_Complet__c.field-meta.xml
<CustomField>
    <fullName>Taux_devis_conversion_Complet__c</fullName>
    <label>Taux devis conversion Complet</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>