force-app/main/default/objects/VITauxHoraire__c/fields/taux_devis_horaire__c.field-meta.xml
<CustomField>
    <fullName>taux_devis_horaire__c</fullName>
    <label>Taux devis horaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>