force-app/main/default/objects/VITauxHoraire__c/fields/Taux_engage_conversion_PRI__c.field-meta.xml
<CustomField>
    <fullName>Taux_engage_conversion_PRI__c</fullName>
    <label>Taux engagé conversion PRI</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>