force-app/main/default/objects/VITauxHoraire__c/fields/Taux_engage_horaire__c.field-meta.xml
<CustomField>
    <fullName>Taux_engage_horaire__c</fullName>
    <label>Taux engagé horaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>