force-app/main/default/objects/VITauxHoraire__c/listViews/FR.listView-meta.xml
<ListView>
    <fullName>FR</fullName>
    <columns>NAME</columns>
    <columns>Centre_Section__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>taux_devis_horaire__c</columns>
    <columns>Taux_devis_conversion_PRI__c</columns>
    <columns>Taux_devis_conversion_Complet__c</columns>
    <columns>Taux_engage_horaire__c</columns>
    <columns>Taux_engage_conversion_PRI__c</columns>
    <columns>Taux_engage_conversion_Complet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>EUR</value>
    </filters>
    <label>FR</label>
</ListView>